@startuml

title __COUNTIRES's Class Diagram__\n

  namespace  {
    namespace om.example.countires {
      class com.example.countires.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace controllers {
        class com.example.countires.controllers.ResultWindowController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace controllers {
        class com.example.countires.controllers.TestWindowController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace domain {
        class com.example.countires.domain.Answer {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace domain {
        class com.example.countires.domain.Country {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace domain {
        class com.example.countires.domain.Question {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace domain {
        class com.example.countires.domain.Quiz {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace domain {
        class com.example.countires.domain.Result {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace h2database {
        interface com.example.countires.h2database.CountryDao {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace h2database {
        class com.example.countires.h2database.H2DatabaseConnection {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.countires {
      namespace h2database {
        class com.example.countires.h2database.JdbcCountryDao {
        }
      }
    }
  }
  

  com.example.countires.HelloApplication -up-|> javafx.application.Application
  com.example.countires.controllers.ResultWindowController o-- com.example.countires.h2database.CountryDao : countryDao
  com.example.countires.controllers.TestWindowController o-- com.example.countires.h2database.CountryDao : countryDao
  com.example.countires.controllers.TestWindowController o-- com.example.countires.domain.Quiz : quiz
  com.example.countires.domain.Question o-- com.example.countires.domain.Country : country
  com.example.countires.h2database.JdbcCountryDao .up.|> com.example.countires.h2database.CountryDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
